<resources>
    <string name="app_name">Demo App 1</string>
    <string name="username">Employee Name</string>
    <string name="employeeId">Employee Id</string>
    <string name="save">Save</string>
    <string name="insert_new_data">Insert New Data</string>
    <string name="update">Update Data</string>
    <string name="delete_existing_data">Delete Existing Data</string>
    <string name="view_data">View Data</string>
    <string name="my_employee">My Employee</string>
    <string name="employee_details">Employee Details</string>
    <string name="space" />
    <string name="dot">.</string>
    <string name="_1">1</string>
    <string name="mysql_with_recyclerview">MySQL with RecyclerView</string>
    <string name="java_apps">Java Applications</string>
    <string name="intent">Intent</string>
    <string name="implicit_intent">Implicit Intent</string>
    <string name="explicit_intent">Explicit Intent</string>
    <string name="visit">Visit</string>
    <string name="first_activity">First Activity</string>
    <string name="second_activity">Second Activity</string>
    <string name="call_second_activity">Call Second Activity</string>
    <string name="call_first_activity">Call First Activity</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="next_page">Next Page</string>
    <string name="service">Service</string>
    <string name="enter_your_text_here">Enter your text here</string>
    <string name="camera">Camera</string>
    <string name="open_camera">Open Camera</string>
    <string name="test">Test</string>
    <string name="display_data">Display Data</string>
    <string name="tit">Title:</string>
    <string name="cat">Category:</string>
    <string name="myasynctask">MyAsyncTask</string>
    <string name="download">Download</string>

    <string name="title_text">BMI Calculator</string>
    <string name="weight_counter_txt">50</string>
    <string name="age_counter_txt">25</string>
    <string name="weight_title_txt">Weight (kg)</string>
    <string name="age_title_txt">Age</string>
    <string name="height_title_txt">5 feet 4 inches </string>
    <string name="button_text">Calculate</string>
    <string name="button2_text">Calculate Again</string>
    <string name="ft">ft</string>
    <string name="in">in</string>
    <string name="height">Height</string>
    <string name="YourBmiText">Your BMI is</string>
    <string name="bmiValue">20.5</string>
    <string name="bmiTips">You are underweight So you may need to put on some weight.</string>
    <string name="todo">TODO</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="services">Services</string>
    <string name="broadcast_receiver">Broadcast Receiver</string>
    <string name="turn_airplane_mode_on_and_off">Turn Airplane Mode ON and OFF</string>
    <string-array name="tips_array">
        <item>You are severely underweight. It is a sign that you\'re not eating enough or you may be ill.</item>
        <item>You are underweight So you may need to put on some weight. </item>
        <item>You are at a healthy weight for your height. You lower your risk of developing serious health problems.</item>
        <item>You are slightly overweight. You may be advised to lose some weight for health reasons.</item>
        <item>You are heavily overweight. Your health may be at risk if you do not lose weight.</item>
    </string-array>
</resources>