<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeScreenActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/java_apps" />


        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/mysql_with_recyclerview"
            android:textAllCaps="false"
            android:id="@+id/btnMySQL"
            android:backgroundTint="@color/blue_700"
            android:layout_marginTop="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnMySQL"
            android:text="@string/implicit_intent"
            android:id="@+id/btnImplicit"
            android:textAllCaps="false"
            android:backgroundTint="@color/blue_700"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnImplicit"
            android:text="@string/explicit_intent"
            android:id="@+id/btnExplicit"
            android:textAllCaps="false"
            android:backgroundTint="@color/blue_700"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnExplicit"
            android:text="@string/service"
            android:id="@+id/btnService"
            android:textAllCaps="false"
            android:backgroundTint="@color/blue_700"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>