<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".intent.explicitIntent.IntentActivityFirst">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:text="@string/first_activity"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            android:id="@+id/tvIntentFirst"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvIntentFirst"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_your_text_here"
            android:id="@+id/et1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et1"
            android:layout_marginTop="20dp"
            android:id="@+id/et2"
            android:hint="@string/enter_your_text_here"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et2"
            android:layout_marginTop="30dp"
            android:id="@+id/btnA1"
            android:backgroundTint="@color/blue_700"
            android:text="@string/call_second_activity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>