<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".asyncTask.AsyncTaskActivity">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/displayData"
            android:layout_width="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/blue_700"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/download"
            android:textColor="#fff"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleTextView"
            app:layout_constraintTop_toBottomOf="@id/displayData"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:visibility="gone"
            android:layout_marginStart="50dp"
            android:text="@string/tit"
            android:textColor="#000"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/categoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/titleTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/cat"
            android:textColor="#000"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/categoryTextView"
            android:background="@color/yellow"
            android:layout_width="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>